--- a/views/erroBusca.ejs
+++ b/views/erroBusca.ejs
@@ -19,7 +19,7 @@
         <input type="text" name="nome"  required>
         <label>E-mail</label>
         <input type="text" name="email"  required>
-        <button type="submit">+</button>
+        <button type="submit" ><a href="/">+</a></button>
     </form>
 </body>
 </html>
