--- a/views/erroCriar.ejs
+++ b/views/erroCriar.ejs
@@ -18,7 +18,7 @@
         <input type="text" name="nome"  required>
         <label>E-mail</label>
         <input type="text" name="email"  required>
-        <button type="submit">+</button><br>
+        <button type="submit" ><a href="/">+</a></button> <button type="submit">+</button><br>
         <label> <%=mensagem%></label>
     </form>
 </body>
