--- a/views/contatos.ejs
+++ b/views/contatos.ejs
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div id="exibirContato" name="exibirContato">
+            <h2>Você buscou por "<%=nome%>"</h2>
             <%contato.forEach(value =>{%>
                 <h3>Nome: </h3>
                 <label><%= value.nome%></label>
